Fix authorization and eslint

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  width: 85%;
-  margin: 5% auto;
-  text-align: center;
+  /* width: 85%; */
+  /* margin: 5% auto; */
+  /* text-align: center; */
 }
