--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,28 +1,3 @@
-.btn-bad {
-  @apply bg-red-600 shadow rounded py-2 px-3 text-light-50;
-}
-
-.btn-good {
-  @apply py-2 px-3 rounded shadow bg-green-500 text-light-50;
-}
-
-.btn-neutral {
-  @apply bg-blue-400 shadow rounded py-2 px-3 text-light-50;
-}
-
-.btn-bad-light {
-  @apply border border-red-600 shadow rounded py-2 px-3 text-red-600 bg-light-50;
-}
-
-.btn-good-light {
-  @apply border border-green-500 shadow rounded py-2 px-3 text-green-500 bg-light-50;
-}
-
-.btn-neutral-light {
-  @apply border border-blue-400 shadow rounded py-2 px-3 text-blue-400 bg-light-50;
-}
-
-input[type='text'],
-input[type='password'] {
-  @apply px-3 py-2 rounded shadow-md border border-gray-300;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
